--- a/templates/login.html
+++ b/templates/login.html
@@ -47,7 +47,7 @@
                 <i class="fab fa-facebook-f"></i> Facebook
             </button>
             <button class="btn btn-outline-secondary w-100">
-                <i class="fas fa-envelope"></i> Email
+                <i class="fas fa-envelope"></i> Gmail
             </button>
         </div>
 
