--- a/templates/feed.html
+++ b/templates/feed.html
@@ -53,6 +53,7 @@
       <nav>
         <ul>
           <li><a href="{{ url_for('feed') }}">Home</a></li>
+          <li><a href="{{ url_for('resources') }}">Resources</a></li>
           <li><a href="{{ url_for('profile') }}">Profile</a></li>
           <li><a href="{{ url_for('consultation') }}">Consultation</a></li>
           <li>
