--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -51,7 +51,7 @@
         <nav>
             <ul>
                 <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="{{ url_for('services') }}">Services</a></li>
                 <li><a href="{{ url_for('signup') }}">Sign up</a></li>
                 <li><a href="{{ url_for('login') }}">Log in</a></li>
             </ul>
