--- a/templates/signup.html
+++ b/templates/signup.html
@@ -56,7 +56,7 @@
             <nav>
                 <ul>
                     <li><a href="{{ url_for('home') }}">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="{{ url_for('services') }}">Services</a></li>
                     <li><a href="{{ url_for('signup') }}">Sign up</a></li>
                     <li><a href="{{ url_for('login') }}">Log in</a></li>
                 </ul>
@@ -102,7 +102,6 @@
 
         <p class="text-center mt-3">Already have an account? <a href="{{ url_for('login') }}">Log In</a></p>
     </div>
-
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
