--- a/static/mainpage.css
+++ b/static/mainpage.css
@@ -57,7 +57,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4); /* Adds a dark overlay */
+  background: rgba(0, 0, 0, 0.4);
   z-index: 1;
 }
 
