--- a/templates/booking.html
+++ b/templates/booking.html
@@ -38,7 +38,7 @@
 
     .calendar-grid button {
       width: 100%;
-      padding: 15px 0; /* Ensure square buttons */
+      padding: 15px 0; 
       border: 1px solid #007bff;
       color: #007bff;
       background-color: #ffffff;
@@ -89,7 +89,7 @@
             <h5 class="mt-2">{{ doctor['name'] }}</h5>
             <p class="text-muted">{{ doctor['specialty'] }}</p>
           </div>
-          <!-- Time Slots Section -->
+          <!-- Time Slots  -->
           <div class="col-md-3 time-section">
             <h5>Available Time Slots</h5>
             <ul class="list-group">
@@ -101,7 +101,7 @@
             <a href="#" class="btn btn-primary mt-4 w-100">Confirm Appointment</a>
           </div>
 
-          <!-- Calendar Section -->
+          <!-- Calendar  -->
           <div class="col-md-9 calendar-section">
             <h5 class="text-center">Select a Date</h5>
             <p class="text-center fs-4">July 2024</p>
