--- a/templates/consultation.html
+++ b/templates/consultation.html
@@ -98,7 +98,7 @@
                 <button type="submit" class="btn btn-primary">Search</button>
             </form>
         </div>
-        <!-- Section for Doctors -->
+        <!-- Doctors sections -->
         <div class="mt-5">
             <h3 class="section-title">Meet Our Experts</h3>
             <div class="row">
