--- a/templates/booking.html
+++ b/templates/booking.html
@@ -98,7 +98,7 @@
               <li class="list-group-item">11:00 AM - 12:00 PM</li>
               <li class="list-group-item">1:00 PM - 2:00 PM</li>
             </ul>
-            <a href="#" class="btn btn-primary mt-4 w-100">Confirm Appointment</a>
+            <a href="{{ url_for('trigger_404') }}" class="btn btn-primary mt-4 w-100">Confirm Appointment</a>
           </div>
 
           <!-- Calendar  -->
