--- a/templates/profile.html
+++ b/templates/profile.html
@@ -83,7 +83,7 @@
         <h2>User123</h2>
         <p>130 Followers</p>
         <p>Welcome to my profile!</p>
-        <button class="btn btn-primary">Message</button>
+        <a href="{{ url_for('trigger_404') }}" class="btn btn-primary">Message</a>
       </div>
     </div>
 
@@ -92,7 +92,7 @@
       <div class="col-12 text-center">
         <h3>Latest Posts</h3>
         <p>Check out and share your own posts</p>
-        <button class="btn btn-success mb-4">Create Post</button>
+        <a href="{{ url_for('trigger_404') }}" class="btn btn-success mb-4">Create Post</a>
       </div>
     </div>
 
