modify the profile page by make a button in it to redirect to edit page that help the user to add bio to there accounts and modify the pages by adding on it coode to make the flash work

--- a/templates/booking.html
+++ b/templates/booking.html
@@ -79,6 +79,13 @@
   </style>
 </head>
 <body>
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">{{ message }}</div>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
   <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-8 booking-container">
